--- a/CreArte/Views/Shared/header.cshtml
+++ b/CreArte/Views/Shared/header.cshtml
@@ -13,6 +13,7 @@
     {
         { "home", "Bienvenido" },
         { "usuarios", "Usuarios" },
+        { "caja", "Caja" },
         { "ventas", "Ventas" },
         { "pedidos", "Pedidos" },
         { "clientes", "Clientes" },
