Reporte de Clientes, Empleados y Usuarios

--- a/CreArte/Views/Shared/_Layout.cshtml
+++ b/CreArte/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
     @* 2) Librerías de terceros *@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/litepicker@2.0.12/dist/litepicker.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
     @* 3) JS del sidebar (usa Bootstrap Collapse) *@
     @* <script src="~/js/sidebar.js" asp-append-version="true"></script> *@
